# vpn-bot

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: bypass_domains.txt  config.py  log.txt  main.py
app/bot/: create_bot.py
app/bot/user/: kbs.py  router.py  schemas.py
app/dao/: dao.py  models.py
app/services/: remnawave.py
app/utils/: happ.py  routing_profile.py
migrations/: env.py
migrations/versions/: 1a16a17e8f55_remove_sub_token_from_users.py  1f87f83e7202_add_sub_token_to_users.py  728db1cb29a0_add_subscription_url_to_users.py  b95a048017a2_initial.py
