[project]
name = "vpn-telegram-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.27.0",
    "aiogram-dialog>=2.6.0",
    "alembic>=1.14.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.3",
    "greenlet>=3.4.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]
